; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_storages.c_STORAGES_fetch_stream.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_storages.c_STORAGES_fetch_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tagMSIVIEW = type { i32 }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [18 x i8] c"(%p, %d, %d, %p)\0A\00", align 1
@ERROR_FUNCTION_FAILED = common dso_local global i64 0, align 8
@ERROR_INVALID_DATA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.tagMSIVIEW*, i64, i64, i32**)* @STORAGES_fetch_stream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @STORAGES_fetch_stream(%struct.tagMSIVIEW* %0, i64 %1, i64 %2, i32** %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.tagMSIVIEW*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32**, align 8
  %10 = alloca %struct.TYPE_2__*, align 8
  store %struct.tagMSIVIEW* %0, %struct.tagMSIVIEW** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i32** %3, i32*** %9, align 8
  %11 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %6, align 8
  %12 = bitcast %struct.tagMSIVIEW* %11 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %12, %struct.TYPE_2__** %10, align 8
  %13 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i32**, i32*** %9, align 8
  %17 = call i32 @TRACE(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), %struct.tagMSIVIEW* %13, i64 %14, i64 %15, i32** %16)
  %18 = load i64, i64* %7, align 8
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp sge i64 %18, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = load i64, i64* @ERROR_FUNCTION_FAILED, align 8
  store i64 %24, i64* %5, align 8
  br label %27

25:                                               ; preds = %4
  %26 = load i64, i64* @ERROR_INVALID_DATA, align 8
  store i64 %26, i64* %5, align 8
  br label %27

27:                                               ; preds = %25, %23
  %28 = load i64, i64* %5, align 8
  ret i64 %28
}

declare dso_local i32 @TRACE(i8*, %struct.tagMSIVIEW*, i64, i64, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
